my-ingress/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
  labels:
    name: student-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /getStudents
            pathType: Prefix
            backend:
              service:
                name: student-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-clusterip-svc
                port:
                  number: 80
